# iot-dc3

./: .browserslistrc  .dockerignore  .env  .env.example  .eslintignore  .eslintrc.cjs  .eslintrc.js  .eslintrc.ts  .gitignore  .prettierignore  .prettierrc  .prettierrc.cjs  .prettierrc.js  .prettierrc.mjs  .prettierrc.ts  .travis.yml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh.md  CONTRIBUTING.md  COPYRIGHT  Dockerfile  LICENSE-ZH.txt  LICENSE.txt  LICENSE.zh.md  LICENSE.zh.txt  Makefile  README.ai.md  README.es.md  README.ja.md  README.ko.md  README.md  README.ru.md  README.vi.md  README.zh.md  SECURITY.md  babel.config.js  checkstyle.xml  components.d.ts  (+20 more)
.claude/: CLAUDE.md  settings.local.json
.env/: dev.env
.githooks/: commit-msg
.github/: CHANGE.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  TITLE.md  codeql-config.yml  dependabot.yml  pull_request_template.md
.husky/: pre-commit
analysis/: identification-defects.md  identification-knowledge-entries.md
config/: index.js
dc3-api/: pom.xml
dc3-auth/: Dockerfile  pom.xml
dc3-center/: pom.xml
dc3-collect/: pom.xml
dc3-common/: pom.xml
dc3-coverage/: pom.xml
dc3-dbs/: .gitignore  pom.xml
dc3-device/: pom.xml
dc3-devices/: pom.xml
dc3-driver/: pom.xml
dc3-e2e/: README.md  pom.xml
dc3-gateway/: Dockerfile  README.md  pom.xml
dc3-monitor/: pom.xml
dc3-register/: pom.xml
dc3-service/: pom.xml
dc3-service-center/: pom.xml
dc3-service-provider/: pom.xml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
(+10645 files in other folders)
