[package]
name = "IoT DC3"
version = "2024.3.0"
description = "IoT DC3 Application"
authors = ["pnoker"]
license = "Apache 2.0"
repository = "https://github.com/pnoker/iot-dc3"
edition = "2021"
rust-version = "1.83.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.0", features = [ "devtools"] }
tauri-plugin-log = "2.0.0-rc"
